--- a/MeltingScreen.csproj
+++ b/MeltingScreen.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -78,6 +79,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\button_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_min_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_max_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_close_normal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_min_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_max_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\window_controls_close_hover.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
